# Chess-Engine

./: CMakeLists.txt  ChessEngineApp.cpp  ChessEngineApp.h  README.md  main.cpp
ChessEngineLib/: Board.cpp  Board.h  BoardFactory.cpp  BoardFactory.h  CMakeLists.txt  Drawable.cpp  Drawable.h  ImageDrawable.cpp  ImageDrawable.h  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  PictureObserver.cpp  PictureObserver.h  Piece.cpp  Piece.h  PolyDrawable.cpp  PolyDrawable.h  Square.cpp  Square.h  ViewEdit.cpp  ViewEdit.h
Tests/: CMakeLists.txt
